# cpp_raylib_Tetris

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: block.cpp  block.hpp  blocks.cpp  game.cpp  game.hpp  gameConfig.hpp  grid.cpp  grid.hpp  main.cpp  position.cpp  position.hpp
